Spacing fixes

--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -1,6 +1,6 @@
 .postprofile {
 	overflow: hidden;
-	padding: 15px 0;
+	padding: 30px 0;
 	margin: 30px 0 50px;
 	border-top: 1px solid $divider-color;
 	border-bottom: 1px solid $divider-color;
@@ -13,7 +13,6 @@
         float: left;
         width: 12%;
         height: 12%;
-        margin: 30px 0;
         @include border-radius(50%);
     }
     .info {
@@ -22,14 +21,14 @@
         float: right;
     }
     h4 {
-        margin: 15px 0;
+        margin: 0 0 15px;
     }
     p {
         margin: 15px 0;
         font: 400 14px $font-stack-content;
         line-height: 32px;
-    }
-    ul.social {
-        @include social-icon;
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 }
